2002-01-15  John Levon  <moz@compsoc.man.ac.uk>

	* module/Makefile.in: whoops, forgot to commit this
 
2002-01-15  John Levon  <moz@compsoc.man.ac.uk>

	* gui/oprof_start.cpp: some improvements for RTC
 
2002-01-15  John Levon  <moz@compsoc.man.ac.uk>

	* dae/op_stop: fix "op_start && op_stop" bug using multiple
	  dump_stop writes.
 
2002-01-14  Dave Jones <davej@suse.de>

	* pp/op_time.cpp: fix for printing (NaN%) in the zero sample case.

2002-01-14  John Levon  <moz@compsoc.man.ac.uk>

	* module/op_rtc.c: remove unneeded check

2002-01-14  John Levon  <moz@compsoc.man.ac.uk>

	* dae/op_start: fix for PMC case
 
2002-01-14  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update

	* dae/op_start: take --rtc-value

	* dae/oprofiled.c: set headers sensibly for RTC

	* doc/oprofile.1.in: update

	* doc/oprofile.sgml: RTC update

	* events/op_events_descr.c: 
	* events/op_events.c: good name for RTC event 

	* gui/oprof_start.cpp: basic support for RTC

	* module/op_rtc.c: implement and use rtc_value

2002-01-14  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update

	* dae/op_start: load module at start. Handle CPU_RTC.
	  Avoid sysctl for now on RTC case.

	* dae/oprofiled.c: only read sysctls if PMC. Needs clean.

	* events/op_events.c: add RTC event.

	* events/op_events_desc.c: get CPU type from module. 

	* module/op_init.c: detect CPU_RTC.

	* module/op_nmi.c: setup code moved from op_init.c

	* module/op_rtc.c: enable interrupt, fixed at 128 for now.

	* module/op_x86.c: add Athlon to needs_apic_setup checks

	* module/oprofile.c: use correct interrupt handler based on
	  CPU type

2002-01-14  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update

	* op_user.h: add CPU_RTC

	* op_init.c: add FIXMEs

	* op_nmi.c:
	* op_rtc.c:
	* oprofile.h:
	* oprofile.c: implement abstract interrupt handler code

2002-01-14  John Levon  <moz@compsoc.man.ac.uk>

	* gui/oprof_start_config.cpp: fix vmlinux/system.map defaults
 
2002-01-13  Philippe Elie  <ph_e@club-internet.fr>
