@@ -16,8 +16,21 @@
  */
 
 #include "op_dcache.h"
+/* get the real request_region */
+#undef request_region
+#include <linux/ioport.h>
 
 #ifdef NEED_2_2_DENTRIES
+ 
+/* note - assumes you only test for NULL, and not
+ * actually care about the return value */
+void *compat_request_region (unsigned long start, unsigned long n, const char *name)
+{
+        if (check_region (start, n) != 0)
+                return NULL;
+        request_region (start, n, name);
+        return (void *) 1;
+}
  
 int wind_dentries_2_2(struct dentry *dentry)
 {
