@@ -1,5 +1,13 @@
 2002-01-15  John Levon  <moz@compsoc.man.ac.uk>
 
+	* TODO: update
+
+	* module/compat.h:
+	* module/compat.c:
+	* module/op_rtc.c: fix 2.2 compile
+
+2002-01-15  John Levon  <moz@compsoc.man.ac.uk>
+
 	* module/Makefile.in: whoops, forgot to commit this
  
 2002-01-15  John Levon  <moz@compsoc.man.ac.uk>
